# production_ml

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  coffee_data_files.ipynb  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: pull_request_template.md
about/: index.html
docs/: about.md
search/: search_index.json
site/: index.html  sitemap.xml
site/about/: index.html
site/search/: search_index.json
src/: logging_config.py  run.py
src/components/: config.py
src/components/data_import/: coffee_data.py  load_data.py  utils.py
src/components/format_data/: common.py
src/components/schemas/: table_schemas.py
tests/: tests_data_import_utils.py
tests/data/: cust_data.csv  cust_data.pq
