[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "production_ml"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
    { name = "Michelle Conway", email = "conwaymichellemarie@gmail.com" }
]

[tool.poetry]
readme = "README.md"

dependencies = [
    "pandas",
    "numpy",
    "pyspark[ml]",
    "statsmodels",
    "sklearn",
    "pytest"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "flake8",
    "isort",
    "black",
    "mypy"
]

docs = [
    "mkdocs"
]

[tool.flake8]
max-line-length = 79

[tool.isort]
profile = "black"
remove_imports = ["os", "json"]

[tool.black]
max-line-length = 79

[tool.mypy]
warn_return_any = true
warn_unused_configs = true


